# brain-terminal

./: .gitattributes  .gitignore  BUILD_LINUX.md  CMakeLists.txt  KRYPTON_INTEGRATION.md  PKGBUILD  build_linux.sh  build_windows.bat
handoffs/: handoff_l2w_features.md  handoff_l2w_features2.md  handoff_l2w_winport_pty_iface_response.md  handoff_w2l_winport_pty_iface.md  overnight_2026_06_07.md
include/brain/: Config.hpp
include/brain/core/: Sixel.hpp  Terminal.hpp
include/brain/font/: FontManager.hpp
include/brain/input/: InputHandler.hpp
include/brain/parser/: AnsiParser.hpp
include/brain/pty/: PTY.hpp  PTYPlatform.hpp
include/brain/renderer/: Cell.hpp  CharWidth.hpp  Grid.hpp  QtRenderer.hpp  Renderer.hpp  TermImage.hpp
include/brain/sandbox/: Sandbox.hpp
include/brain/scrollback/: ScrollbackBuffer.hpp
include/brain/theme/: Theme.hpp  ThemeLoader.hpp
include/brain/ui/: TerminalWidget.hpp  TerminalWindow.hpp
include/kterm/core/: Terminal.hpp
include/kterm/parser/: AnsiParser.hpp
include/kterm/pty/: PTY.hpp  PTYPlatform.hpp
include/kterm/renderer/: Cell.hpp  Grid.hpp  QtRenderer.hpp
include/utils/: color_utils.hpp  format_utils.hpp  string_utils.hpp  table_utils.hpp
krypton/: -o  README.md  SUDO  brain.exe.manifest  brain.kir  build.bat  cd  dir  fastfetch  fetch  kryofetch  ls  pwd  run.k  ryofetch  setup_shell.ks  su  terk.exe.manifest  terk.kir  winfetch
krypton/linux/: README.md  brain_ansi.k  brain_prompt.k  kryofetch.k  terk_ansi.k  terk_prompt.k
platform/linux/: PTYPlatform.cpp
platform/macos/: Config.h  Config.mm  DESIGN.md  MetalRenderer.h  MetalRenderer.mm  PTYPlatform.cpp  TermView.h  TermView.mm  brain.config.example  build.sh  main_macos.mm  shell-integration.zsh
platform/windows/: PTYPlatform.cpp  brain-terminal.manifest
resources/: brain.desktop  brain.qrc
resources/config/: brain.conf
resources/icons/: make_icon.py
resources/themes/: catppuccin-mocha.json  default.json  dracula.json  gruvbox-dark.json  light.json  nord.json  solarized-dark.json  tokyo-night.json
src/: Config.cpp  TerminalWidget.cpp  TerminalWindow.cpp  main.cpp
src/core/: Sixel.cpp  Terminal.cpp
src/font/: FontManager.cpp
src/input/: InputHandler.cpp
src/parser/: AnsiParser.cpp
src/pty/: PTY.cpp  PTYPlatform.cpp
src/renderer/: Grid.cpp  QtRenderer.cpp  Renderer.cpp
src/sandbox/: Sandbox.cpp
src/scrollback/: ScrollbackBuffer.cpp
src/theme/: Theme.cpp  ThemeLoader.cpp
tests/: test_ansi.cpp  test_winop.cpp
